src/test/deca/codegen/invalid/test_asm.deca
// testing asm function

class A {
    void justAMethod()
        asm ("Ce que j'ai envie;");
}

{
    A a = new A();
    a.justAMethod();

}

// TODOTEST: le test est bon non ?